--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dolchi21/iqueue",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/promise-queue": "^2.2.0",
     "axios": "^0.19.2",
     "typescript": "^3.9.7"
   },
